# simplerqt

./: CMakeLists.txt  package.xml  plugin.xml  setup.py
include/talos_wbc_gui/: talos_wbc_gui.h
scripts/: talos_wbc_gui
src/: talos_wbc_gui.cpp  talos_wbc_gui.ui
